--- a/I18n/en.json
+++ b/I18n/en.json
@@ -31,7 +31,7 @@
         },
         "Smokescreen": {
             "name": "Smokescreen",
-            "description": "Whenever this ship moves, it gains {0} <c=status>TEMP SHIELD</c>. <c=downside>Decreases by 1 at end of turn.</c>."
+            "description": "Whenever this ship moves, it gains {0} <c=status>TEMP SHIELD</c>. <c=downside>Decreases by 1 at end of turn."
         },
         "BacktrackLeft": {
             "name": "Backtrack Left",
