balance and card art

--- a/I18n/en.json
+++ b/I18n/en.json
@@ -155,7 +155,7 @@
             "name": "Coolant Pump"
         },
         "FluxCompressor": {
-            "name": "Flux Compressor"
+            "name": "Flux Compress"
         },
         "Nova": {
             "name": "Nova"
