--- a/I18n/en/inject.json
+++ b/I18n/en/inject.json
@@ -60,7 +60,7 @@
         [ "Hello little morsel!", "cheeky" ]
     ],
     "EphemeralCardGift": [
-        [ "Nibbs feels dizzy", "squint" ]
+        [ "Nibbs feels dizzy...", "squint" ]
     ],
     "JustPlayedASashaCard_Multi_2": [
         [ "Bleh! It tastes awful!", "serious" ]
